Finalizado o caixa eletrônico.